# pentagram

./: .gitignore  CLAUDE.md  LEGAL_INFO_INTEGRATION.md  MODIFICATION_NOTICE_TEMPLATE.txt  NOTICE  PLAY_STORE_LISTING.md  PRIVACY_POLICY.md  README.md  RELEASING.md  TESTING.md  build.gradle.kts  deploy.sh  full-test-loop.sh  keystore.properties.template  logs.sh  mirror.sh  settings.gradle.kts  test-loop.sh  trigger-airplay.scpt  watch-logs.sh
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/pentagram/airplay/: PlistParsingTest.kt
app/src/androidTest/java/com/pentagram/airplay/service/: AirPlayCryptoTest.kt  FairPlayTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/pentagram/airplay/: AirPlayReceiverActivity.kt  AspectRatioSurfaceView.kt  HelpActivity.kt  LegalInfoActivity.kt  LicenseActivity.kt  MainActivity.kt  OnboardingActivity.kt  PreferencesManager.kt  PrivacyPolicyActivity.kt  SettingsActivity.kt
app/src/main/java/com/pentagram/airplay/crypto/: MirrorBufferDecryptor.kt
app/src/main/java/com/pentagram/airplay/service/: AirPlayCrypto.kt  AirPlayCryptoNative.kt  AirPlayServer.kt  AirPlayServer.kt.bak  AirPlayServer.kt.bak2  AirPlayService.kt  FairPlay.kt  FairPlayDecrypt.kt  (+1 more)
app/src/main/jni/: CMakeLists.txt  airplay_crypto_jni.c  crypto.c  crypto.h  fairplay.h  fairplay_jni.c  logger.h  mirror_buffer.c  mirror_buffer_jni.c  openssl_compat.h  raop.h  raop_ntp.h  utils.h
app/src/main/res/color/: button_background.xml
app/src/main/res/drawable/: circular_button_background.xml  ic_launcher_foreground.xml  tv_banner.xml
app/src/main/res/layout/: activity_airplay_receiver.xml  activity_help.xml  activity_legal_info.xml  activity_license.xml  activity_main.xml  activity_onboarding.xml  activity_privacy_policy.xml  activity_settings.xml  item_onboarding_page.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/raw/: legal_info.txt  privacy_policy.txt  terms_of_service.txt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml
(+1 files in other folders)
